# simple-animator-app

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  platform.rs  undo.rs
src/doc/: canvas.rs  layer.rs  mod.rs  project.rs  transform.rs
src/input/: mod.rs  pointer.rs  screen_pixel.rs  shortcuts.rs  tablet.rs
src/io/: composite.rs  fit.rs  gif_export.rs  gif_import.rs  image_import.rs  legacy.rs  mod.rs  mp4_export.rs  png_import.rs  png_save.rs  png_seq.rs  project_file.rs  video_import.rs
src/timeline/: mod.rs  onion.rs  playback.rs
src/tools/: fill.rs  mod.rs  ribbon.rs  shape.rs  stroke.rs
src/ui/: mod.rs  shell.rs  theme.rs  widgets.rs
