[package]
name = "animator-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Lightweight cross-platform raster animation app for cartoon/anime workflow."
license = "MIT OR Apache-2.0"
default-run = "animator-app"

[[bin]]
name = "animator-app"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.29"
egui_extras   = { version = "0.29", default-features = false, features = ["svg"] }
egui-phosphor = "0.7"

image  = { version = "0.25", default-features = false, features = ["png"] }
rfd    = "0.14"
gif         = "0.13"
color_quant = "1"

bytemuck = { version = "1", features = ["derive"] }
glam     = { version = "0.29", features = ["bytemuck"] }

serde    = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }
toml     = "0.8"

anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"
directories = "5"
dirs        = "5"

[target.'cfg(target_os = "windows")'.dependencies]
# Pen pressure on Windows — Wintab dynamic-loaded so the app still runs on
# machines without a tablet driver.
wintab_lite = { version = "1", features = ["libloading"] }
libloading  = "0.8"
windows     = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
incremental   = false

[profile.dev]
opt-level   = 1
debug       = true
incremental = true
